# humanpy

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: humherb_kin2.launch  humherb_kin2_simply.launch  humkin2_herb.launch  humkinect2.launch  humkinect2_grasp.launch  humkinect2_grasp_frombag.launch  humkinect2_stamp.launch  humkinect2_stamp_frombag.launch  humkinpred.launch  humkinpred_frombag.launch  humkinpred_grasp.launch  humkinpred_grasp_frombag.launch  humkinpred_stamp.launch  humkinpred_stamp_frombag.launch  humkinpredcube_frombag.launch  humpred.launch  humpredherb_kin2.launch  humprediction.launch  humtrackkinect2_herb.launch  test_humkinect2.launch  test_humprediction.launch
ordata/dae/: manifest.xml
scripts/: README.md  hum_herb.py  humherb_kin2.py  humherb_kin2_simply.py  humherb_stamp.py  humkin1_herb.py  humkin2_herb.py  humkinect2.py  humkinect2_grasp.py  humkinect2_stamp.py  humkinect2cube.py  humtrackkinect1_herb.py  humtrackkinect2_herb.py  logtime.py  test_hum_herb.py  test_humherb.py  test_humkinect.py  test_humkinect1.py  test_humkinect2.py  test_tsr.py  test_vectfield.py
src/humanpy/: DecisionLogic.py  Model2.py  goalprediction.py  hum_kin1.py  hum_kin2.py  hum_kin2.py~  hum_kin2_bis.py  humandetection.py  humanhand.py  humankinect.py  humankinect2.py  humantracking_kinect1.py  humantracking_kinect2.py  humpred.py  initialize.py  initialize.py~  todos.txt  utils.py
src/humanpy/action/: __init__.py  grasping.py
src/humanpy/tsr/: fuze.py
