<?xml version="1.0"?>
<package>
    <name>humanpy</name>
    <version>0.1.0</version>
    <description>
	Python library for interacting with OpenRave's Human through OpenRAVE.
    </description>
    <license>BSD</license>

    <author email="rmh@andrew.cmu.edu">Rachel Holladay</author>
    <maintainer email="rmh@andrew.cmu.edu">Rachel Holladay</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>python</build_depend>
    <build_depend>openrave_catkin</build_depend>

    <run_depend>cbirrt2</run_depend>
    <run_depend>openrave</run_depend>
    <run_depend>or_urdf</run_depend>
    <run_depend>or_ompl</run_depend>
    <run_depend>or_parabolicsmoother</run_depend>
    <run_depend>or_rviz</run_depend>
    <run_depend>prpy</run_depend>
    <run_depend>pr_ordata</run_depend>
    <run_depend>python</run_depend>
    <run_depend>python-catkin-pkg</run_depend>
    <run_depend>python-enum</run_depend>
    <run_depend>python-numpy</run_depend>
</package>
